kustomize/overlays/viken-no-fint-flyt-alpha/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-forward
  namespace: viken-no
spec:
  forwardAuth:
    address: http://fint-flyt-auth-forward.viken-no:8080/_oauth
